0017460: Error in StdSelect_BRepOwner::Clear